<?xml version="1.0"?>
<package>
  <name>phoebe</name>
  <version>0.0.1</version>
  <description>Making an RC car robotic</description>
  <maintainer email="rachel@example.com">rachel</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
